# tiralabra

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
docs/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
docs/viikkoraportit/: viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: load_data.py  main.py  neural_net.py  user_interface.py
src/data/: 100_test_data.npz  100_train_data.npz  unit_tests_data.npz
src/tests/: neural_net_test.py
