[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["pakkanep <patrikpakkanen9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
